<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">R Tone</string>


    <string name="action_settings">Settings</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_edit_contact">Edit contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_editText"><i>enter number</i></string>
    <string name="termsOfService"><u>Terms of Service</u></string>
    <string name="copyRight">©2015 CCS VNTeam. All rights reserved.</string>

    <string name="menu_more">More</string>
    <string name="menu_setting">Settings screen</string>
    <string name="menu_clear_log">Clear all logs</string>
    <string name="menu_block_list">Block list</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_about">About</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_call">Call</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_view_details">View details</string>
    <string name="menu_notification_settings">Conversation settings</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_mark_read">Mark read</string>
    <string name="menu_mark_unread">Mark unread</string>
    <string name="menu_block_conversations">Block conversations</string>
    <string name="menu_unblock_conversations">Unblock conversations</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_search_contact">Search contact</string>
    <string name="title_conversations_selected">%d selected</string>
    <string name="title_call">Call</string>
    <string name="title_recents">Recents</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_messages">Messages</string>
    <string name="title_compose">Compose</string>

    <string name="filter_all">All</string>
    <string name="filter_favourist">Favourist</string>
    <string name="filter_rtoneUser">Rtone User</string>

    <string name="login_unauthorized">Your username/password is wrong</string>
    <string name="login_network_unavailable">Service is unavailable</string>
    <string name="login_OTP_wrong">The OTP is wrong</string>

    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <string name="def_theme">Theme1</string>
    <string name="theme_summary">Appearance</string>
    <string name="theme_dialog_title">Theme</string>
    <string name="settings">Settings</string>
    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>

    <string name="contact_add_new">Add new</string>
    <string name="contact_sync_new">Sync new</string>
    <string name="contact_sync_all">Sync all</string>
    <string name="option_rtone">Rtone</string>
    <string name="option_rtone_phonebook">Rtone and Phone book</string>

    <string-array name="phone_types">
        <item>Home</item>
        <item>Mobile</item>
        <item>Work</item>
    </string-array>

    <string name="status_sending">Sending…</string>
    <string name="status_failed">Failed. Tap for options</string>
    <string name="message_timestamp_format"><xliff:g example="Fred Flinstone" id="string">%1$s</xliff:g>\u0020-\u0020<xliff:g example="9:39AM" id="string">%2$s</xliff:g></string>
    <string name="delete_conversation">Delete conversations</string>
    <string name="delete_confirmation">Are you sure you would like to delete (%d) conversations?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="copy_message_text">Copy text</string>
    <string name="view_message_details">View details</string>
    <string name="message_options">Message options</string>
    <string name="favorites">Starred contacts</string>
    <string name="hint_contacts">Enter recipients</string>
    <string name="discard_message_reason">Your message will be discarded because it has no valid recipients.</string>
    <string name="error_no_recipients">Select some contacts to send this message to!</string>

    <!--Chips-->
    <string name="more_string">\u002B<xliff:g id="count">%1$s</xliff:g></string>
    <string name="copy_email">Copy email address</string>
    <string name="copy_number">Copy phone number</string>
    <string name="done">Return</string>

    <string name="dialog_conversation_details_title">Conversation details</string>
    <string name="dialog_conversation_details_last_message_date">Last message date</string>
    <string name="dialog_conversation_details_message_count">Message count</string>
    <string name="dialog_conversation_details_recipients">Recipients (%s)</string>
    <string name="okay">Okay</string>
    <string name="save">Save</string>

    <string name="emoji_people">People</string>
    <string name="emoji_nature">Nature</string>
    <string name="emoji_cars">Cars</string>
    <string name="emoji_backspace">Backspace</string>
    <string name="emoji_food">Food</string>
    <string name="emoji_sport">Sport</string>
    <string name="emoji_electronics">Electronics</string>
    <string name="emoji_symbols">Symbols</string>
    <string name="emoji_recent">Recent Emojis</string>
</resources>


