<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings_screen"
        android:title="@string/menu_setting" />
    <item
        android:id="@+id/menu_block_list"
        android:title="@string/menu_block_list" />
    <!--<item-->
        <!--android:id="@+id/menu_payment_list"-->
        <!--android:title="Payment list" />-->
    <item
        android:id="@+id/menu_clear_log"
        android:title="@string/menu_clear_log"
        android:visible="false" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about" />
    <item
        android:id="@+id/menu_sign_out"
        android:title="@string/menu_sign_out" />
    <item
        android:id="@+id/menu_quit"
        android:title="@string/menu_quit" />

</menu>
